[package]
name = "markdown-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
js-sys = "0.3.61"
pulldown-cmark = "0.9.2"
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window"
]

[lib]
crate-type = ["cdylib", "rlib"]
